--- a/03-problem-framing.Rmd
+++ b/03-problem-framing.Rmd
@@ -214,7 +214,8 @@ At this stage you feel it is not important to be more specific about the analyti
 
 Your next task is to write the business problem statement, which you will circulate to stakeholders for testing. Your hope is that their comments will surface any misunderstandings  or blindnesses that you can address in another---hopefully, the final!---draft of the business problem statement. Ultimately, you want everybody to sign off on your plan.  You also want to set expectations about the process and project deliverables.
 
-What goes into a business problem statement exactly? It is essentially a more orn less informal contract for work. The more specific it is the less potential there is for scope creep later on.  [Scope creep](https://en.wikipedia.org/wiki/Scope_creep): changes to, or uncontrolled growth in, a project's scope after the project begins, which can occur when a project is not initially well-defined.
+What goes into a business problem statement exactly? It is essentially a more or less informal contract for work. The more specific it is the less potential there is for scope creep later on. 
+[Scope creep](https://en.wikipedia.org/wiki/Scope_creep): Changes to, or uncontrolled growth in, a project's scope after the project begins, which can occur when a project is not initially well-defined.
 
 From the *Analytics Body of Knowledge* (ABOK), Chapter 8:
 
@@ -253,15 +254,15 @@ The extended MegaTelCo case was written to include some analytical and political
 
 Here is another scenario to consider. 
 
-A movie theater chain, Reels Inc., owns approximately 1500 movie theaters worldwide.  Each theater records performance data on their projectors during each movie screening.  The data encompasses some 200 different metrics on each projector---for example, temperature, projector voltage, and aspects of picture quality---which are logged at different cadences such as second, minute, and hour. These data are stored locally, and then uploaded to a central server. The company uses these logs in case of problems, for troubleshooting. If a projector goes down, for example, the technical team reviews the logs for that screening in order to identify sources of the problem.  This is quite expensive since the company finds itself always responding to problems after they've happened rather than anticipating problems.  This leads to  costly downtime for the projector, as the technical team must travel to the theater to conduct repairs. Each projector has a maintenance schedule, but projectors often break despite routine maintenance.
+A movie theater chain, Reels Inc., owns approximately 1500 movie theaters worldwide.  Each theater records performance data on their projectors during each movie screening.  The data encompasses some 200 different metrics on each projector---for example, temperature, projector voltage, and aspects of picture quality---which are logged at different cadences such as second, minute, and hour. This data is stored locally, and then uploaded to a central server. The company uses these logs in case of problems, for troubleshooting. If a projector goes down, for example, the technical team reviews the logs for that screening in order to identify sources of the problem.  This is quite expensive since the company finds itself always responding to problems after they've happened rather than anticipating problems.  This leads to  costly downtime for the projector, as the technical team must travel to the theater to conduct repairs. Each projector has a maintenance schedule, but projectors often break despite routine maintenance.
 
 So far the company has used log data only for troubleshooting. However, the VP for Operations, Bill Snively, has realized that the logs could perhaps be used to predict when, and why, a projector might fail. He has asked the company's Director of Analytics, Latoya Abbiah, to look into the possibility of using the projector performance logs to do predictive analytics. This could potentially have a huge upside for the company financially, since it would be much cheaper to do timely maintenance rather than emergency repairs.  
 
-Ms. Abbiah's data science unit acts as an internal consultant at Reels Inc.  Each major project they do is carefully scoped, and a business problem statement is written to ensure that stakeholders are all on the same page. Ms. Abbiah would normally delegate this writing work, but in this case she is intimately familiar with the data and, having just spoken with Mr. Snively, with  the business problem and the stakeholders for the project.  She decides to write the statement herself.  Here is the business problem statement she drafts:
+Ms. Abbiah's data science unit acts as an internal consultant at Reels Inc.  Each major project they do is carefully scoped, and a business problem statement is written to ensure that stakeholders are all on the same page. Ms. Abbiah would normally delegate this writing work, but in this case she is intimately familiar with the data and, having just spoken with Mr. Snively, with  the business problem and the stakeholders for the project, she decides to write the statement herself.  Here is the business problem statement she drafts:
 
-> Broken projectors are an expensive problem at Reels Inc.  We estimate that the company loses approximately $15 million per year due to lost ticket sales and emergency repairs.  Anticipating the failure of individual projectors would enable us to focus our maintenance more precisely than our existing maintenance schedule allows.  We could then work on exactly the projectors that need attention, before they break down, thereby reducing downtime and saving money.
+> Broken projectors are an expensive problem at Reels Inc.  We estimate that the company loses approximately $15 million per year due to lost ticket sales and emergency repairs.  Anticipating the failure of individual projectors would enable us to focus our maintenance more precisely than our existing maintenance schedule allows.  Then, we could exactly work on the projectors that need attention, before they break down, thereby reducing downtime and saving money.
 
-> This will be a predictive analytics project. We will use a classification algorithm to model projector breakdown, using as predictors the large number of available projector sensors currently captured in the logs.  We will use 8 months of historical data to create the model.  The model output will be a probability of individual projector failure.  The Operations team can use these probabilities to identify which fans need  maintenance most immediately.  The deliverable for this project will therefore be a ranked list of at-risk projectors---ranked by the probability of failure--delivered in a dashboard that updates in real-time.  Operations can treat the projectors at the top of the list as the ones most in need of attention.  This project will be considered a success if the losses due to projector failure have been significantly reduced over a year using the ranked list compared to the average of previous years without the list.
+> This will be a predictive analytics project. We will use a classification algorithm to model projector breakdown, using the large number of available projector sensors currently captured in the logs as predictors.  We will use 8 months of historical data to create the model.  The model output will be a probability of individual projector failure.  The Operations team can use these probabilities to identify which fans need  maintenance most immediately.  The deliverable for this project will therefore be a ranked list of at-risk projectors---ranked by the probability of failure, captured in a dashboard that updates in real-time.  Operations can treat the projectors at the top of the list as the ones most in need of attention.  This project will be considered a success if the losses due to projector failure have been significantly reduced over a year using the ranked list compared to the average of previous years without the list.
 
 > As noted, this project is focused on prediction.  Therefore, we will not be including any analysis of why projectors are failing.  That analysis is out of scope for the current project.
 
@@ -282,7 +283,7 @@ Ms. Abbiah's data science unit acts as an internal consultant at Reels Inc.  Eac
 - **5 W's (Who, What, When, Where, Why).** A set of questions designed to elicit a 360 degree view of an analytics problem.
 - **Heilmeier Catechism.**  A set of questions designed to help reviewers evaluate proposed research programs.
 - **Mendelow's Matrix.**  A categorization of  stakeholders along the impact – influence axes.
-- **Wicked problems.**  Wicked problems are poorly defined with roots that are complex and tangled, involve many stakeholders that shared power and opposing views, have conditions that change with every attempt to address it, or are misunderstood until a solution is in hand.
+- **Wicked problems.**  Wicked problems are poorly defined with roots that are complex and tangled, involve many stakeholders that share power and opposing views, have conditions that change with every attempt to address it, or are misunderstood until a solution is in hand.
 - **Categories of analytics  problems.**  Analytics problems, depending on their features, can have organizational, analytic, or content complexity that makes them hard to solve.
 - **Scope creep.**  Changes or uncontrolled growth in a project's scope, at any point after the project begins.
 
