--- a/03-problem-framing.Rmd
+++ b/03-problem-framing.Rmd
@@ -214,8 +214,7 @@ At this stage you feel it is not important to be more specific about the analyti
 
 Your next task is to write the business problem statement, which you will circulate to stakeholders for testing. Your hope is that their comments will surface any misunderstandings  or blindnesses that you can address in another---hopefully, the final!---draft of the business problem statement. Ultimately, you want everybody to sign off on your plan.  You also want to set expectations about the process and project deliverables.
 
-What goes into a business problem statement exactly? It is essentially a more or less informal contract for work. The more specific it is the less potential there is for scope creep later on. 
-[Scope creep](https://en.wikipedia.org/wiki/Scope_creep): Changes to, or uncontrolled growth in, a project's scope after the project begins, which can occur when a project is not initially well-defined.
+What goes into a business problem statement exactly? It is essentially a more or less informal contract for work. The more specific it is the less potential there is for scope creep later on. [Scope creep](https://en.wikipedia.org/wiki/Scope_creep): Changes to, or uncontrolled growth in, a project's scope after the project begins, which can occur when a project is not initially well-defined.
 
 From the *Analytics Body of Knowledge* (ABOK), Chapter 8:
 
@@ -258,7 +257,7 @@ A movie theater chain, Reels Inc., owns approximately 1500 movie theaters worldw
 
 So far the company has used log data only for troubleshooting. However, the VP for Operations, Bill Snively, has realized that the logs could perhaps be used to predict when, and why, a projector might fail. He has asked the company's Director of Analytics, Latoya Abbiah, to look into the possibility of using the projector performance logs to do predictive analytics. This could potentially have a huge upside for the company financially, since it would be much cheaper to do timely maintenance rather than emergency repairs.  
 
-Ms. Abbiah's data science unit acts as an internal consultant at Reels Inc.  Each major project they do is carefully scoped, and a business problem statement is written to ensure that stakeholders are all on the same page. Ms. Abbiah would normally delegate this writing work, but in this case she is intimately familiar with the data and, having just spoken with Mr. Snively, with  the business problem and the stakeholders for the project, she decides to write the statement herself.  Here is the business problem statement she drafts:
+Ms. Abbiah's data science unit acts as an internal consultant at Reels Inc.  Each major project they do is carefully scoped, and a business problem statement is written to ensure that stakeholders are all on the same page. Ms. Abbiah would normally delegate this writing work, but in this case she is intimately familiar with the data and, having just spoken with Mr. Snively, understands  the business problem.  She decides to write the statement herself.  Here is the business problem statement she drafts:
 
 > Broken projectors are an expensive problem at Reels Inc.  We estimate that the company loses approximately $15 million per year due to lost ticket sales and emergency repairs.  Anticipating the failure of individual projectors would enable us to focus our maintenance more precisely than our existing maintenance schedule allows.  Then, we could exactly work on the projectors that need attention, before they break down, thereby reducing downtime and saving money.
 
